...
        children: <Widget>[
          TextField(
            decoration: InputDecoration (labelText: "Título",
              hintText: "Ingrese un título"
            ),
            controller: titleTextController,
            key: ValueKey("field1"),
            maxLines: null,
            keyboardType: TextInputType.multiline,
          ),

          TextField(
            decoration: InputDecoration(labelText: "Descripción",
            hintText: "Ingrese una breve descripción"),
            controller: descriptTextController,
            key: ValueKey("field2"),
            maxLines: null,
            keyboardType: TextInputType.multiline,

          ),

          RaisedButton(
...
